solc_opt_ossfuzz_seed_corpus/test_sol/test_ef1c7cef2045a853faa69b91151260e7a0927a027ccc717497f6a7ced071c6a2_contributing_rst.sol
contract test {
    uint256 variable;
}
// ----
// DeclarationError: (36-52): Identifier already declared.

